--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ jobs:
           sudo apt-get install -y opam
       - name: "setup oxcaml"
         run: |
+          opam init
           opam update --all
           opam switch create 5.2.0+ox --repos ox=git+https://github.com/oxcaml/opam-repository.git,default
       - name: "install dependencies"
