--- a/lib/dune
+++ b/lib/dune
@@ -1,4 +1,7 @@
 (library
  (name oxqr)
+ (libraries base)
+ (preprocess
+  (pps ppx_sexp_conv ppx_compare ppx_hash))
  (flags
   (:standard -w -32)))
