feat: Add release compilation mode
Strip debug symbols.

--- a/bin/dune
+++ b/bin/dune
@@ -4,3 +4,9 @@
  (libraries oxqr cmdliner)
  (flags
   (:standard -w -32)))
+
+(env
+ (release
+  (flags (:standard -w -32))
+  (ocamlopt_flags (:standard -O3 -w -32))
+  (link_flags (:standard -cclib -s))))
