--- a/lib/dune
+++ b/lib/dune
@@ -5,3 +5,9 @@
   (pps ppx_sexp_conv ppx_compare ppx_hash))
  (flags
   (:standard -w -32)))
+
+(env
+ (release
+  (flags (:standard -w -32))
+  (ocamlopt_flags (:standard -O3 -w -32))
+  (link_flags (:standard -cclib -s))))
