--- a/lib/dune
+++ b/lib/dune
@@ -8,6 +8,9 @@
 
 (env
  (release
-  (flags (:standard -w -32))
-  (ocamlopt_flags (:standard -O3 -w -32))
-  (link_flags (:standard -cclib -s))))
+  (flags
+   (:standard -w -32))
+  (ocamlopt_flags
+   (:standard -O3 -w -32))
+  (link_flags
+   (:standard -cclib -s))))
