feat: Verify zero-alloc with `Runtime_events`

--- a/bin/dune
+++ b/bin/dune
@@ -15,6 +15,13 @@
  (flags
   (:standard -w -32)))
 
+(executable
+ (name verify)
+ (public_name verify)
+ (libraries oxqr runtime_events)
+ (flags
+  (:standard -w -32)))
+
 (env
  (release
   (flags
