feat: Rename GC test

--- a/bin/dune
+++ b/bin/dune
@@ -16,8 +16,8 @@
   (:standard -w -32)))
 
 (executable
- (name verify)
- (public_name verify)
+ (name gc)
+ (public_name gc)
  (libraries oxqr runtime_events)
  (flags
   (:standard -w -32)))
